# autoinc-rocq

./: .gitignore  Makefile.conf  README.md  _CoqProject
CaseStudies/RelationalAlgebra/: BagOps.ml  Base.ml  Dump.ml  Example1.ml  Example2.ml  Example3_Join.ml  Example3_Join_quotient.ml  Example4_Agg.ml  Example5_Project.ml  Example6_Project_Agg.ml  ExpSetup.ml  Experiment_1_Join.ml  Experiment_2_Agg_Join.ml  Rand.ml  agg_join.csv  dune  hash_join.csv  join.csv  join_agg.csv  runexp.sh  stat_agg_join.txt  stat_hash_join.txt  stat_hash_join_agg.csv  stat_hash_join_agg.txt  stat_join.txt
CaseStudies/RelationalAlgebra/BagOp/: Bag.ml  IncAggregate.ml  IncHashJoin.ml  IncJoin.ml  IncProduct.ml  IncProject.ml  IncSelect.ml  IncUnionAll.ml  Int.ml  Pair.ml  Seq.ml
CaseStudies/String/: README.md  dune-project  last_index_of_page.txt  last_index_of_page_01246.txt  runexp.sh  (+6 more)
CaseStudies/String/test/: base.ml  diffop_experiment.ml  dune  exp_concat.ml  exp_index_of.ml  exp_last_index_of.ml  exp_last_index_of_state.ml  exp_last_index_of_state_single_fun.ml  exp_string_op.ml  exp_string_op_opt.ml  experiment.ml  rand.ml  test_string_op.ml  test_string_op_char.ml  test_string_op_string.ml
CaseStudies/String/test/resources/lastIndexOf/: page.txt  paragraph.txt
CaseStudies/String/test/resources/stringOp/: A.txt  B.txt
Change/: BagChange.v  BoolChange.v  Change.v  ListChange.v  NatChange.v  PairChange.v  SeqChange.v  SetChange.v  StringChange.v  ZChange.v
Data/: AggregateTree.v  BinarySearchTree.v  FunBag.v  List.v  ListBag.v  ListMap.v  String.v  ZBag.v
Operator/: BagOp.v  ListOp.v  NatOp.v  Operator.v  Partial.v  SetoidOperator.v  StringOp.v  TrimOps.v
Utils/: EqDec.v  Fold.v  Tactic.v
(+16 files in other folders)
